Rework exit on windows