@@ -136,6 +136,7 @@ project.ext {
             "--add-exports", "jdk.zipfs/jdk.nio.zipfs=io.xpipe.modulefs",
             "--add-opens", "javafx.graphics/com.sun.glass.ui=io.xpipe.app",
             "--add-opens", "javafx.graphics/javafx.stage=io.xpipe.app",
+            "--add-opens", "javafx.graphics/com.sun.javafx.tk=io.xpipe.app",
             "--add-opens", "javafx.graphics/com.sun.javafx.tk.quantum=io.xpipe.app",
             "-Dio.xpipe.app.arch=$rootProject.arch",
             "-Dfile.encoding=UTF-8",
